# -AgentOS-Distributed-LLM-Orchestration

./: .env.example  .gitignore  README.md  pyproject.toml  railway.yml  test_workflow.py
files/: Dockerfile  agent_core.py  docker-compose.yml  main.py  message_bus.py  observability.py  requirements.txt  scheduler.py  state_store.py  workflow_graph.py
files/deploy/: otel-config.yaml  prometheus.yml
scripts/: reset_db.py
src/: __init__.py
src/api/: main.py  routes.py  telemetry.py
src/core/: config.py  db.py  message_bus.py
src/runtime/: graph.py  lifecycle.py  worker.py  worker_process.py
src/runtime/agents/: __init__.py  _base.py  aggregator.py  critic.py  fact_checker.py  researcher.py  summarizer.py
src/ui/: dashboard.html
